--- a/index.html
+++ b/index.html
@@ -132,8 +132,11 @@
                                 </ul>
                             </li>-->
                             <li>
+                                    <a href="future_member.html" title="Future Member">Contact</a>
+                                </li>
+                            <!-- <li>
                                 <a href="contact.html" title="Contact">Contact</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
             </div>
