--- a/poeple.html
+++ b/poeple.html
@@ -392,12 +392,12 @@
                         </div>
                         <div class="modal-footer">
                                <p id="LarsonEmail" class="teamemail" style="display: none; text-align: left;" >xyz@gmail.com</p>
-                               <p id="ZhangEmail" class="teamemail" style="display: none; text-align: left;" >1@gmail.com</p>
-                               <p id="OrduzEmail" class="teamemail" style="display: none; text-align: left;" >2@gmail.com</p>
-                               <p id="DuhanEmail" class="teamemail" style="display: none; text-align: left;" >3@gmail.com</p>
+                               <p id="ZhangEmail" class="teamemail" style="display: none; text-align: left;" >kg.zhang@aggiemail.usu.edu</p>
+                               <p id="OrduzEmail" class="teamemail" style="display: none; text-align: left;" >cdloaiza@aggiemail.usu.edu</p>
+                               <p id="DuhanEmail" class="teamemail" style="display: none; text-align: left;" >naveen.duhan@usu.edu</p>
                                <p id="MhetreEmail" class="teamemail" style="display: none; text-align: left;" >suyash.mhetre@aggiemail.usu.edu</p>
-                               <p id="NikhilEmail" class="teamemail" style="display: none; text-align: left;" >4@gmail.com</p>
-                               <p id="ListerEmail" class="teamemail" style="display: none; text-align: left;" >5@gmail.com</p>
+                               <p id="NikhilEmail" class="teamemail" style="display: none; text-align: left;" >nikhil.sai.kurivella@aggiemail.usu.edu</p>
+                               <p id="ListerEmail" class="teamemail" style="display: none; text-align: left;" >matthew.lister@aggiemail.usu.edu</p>
                                <p id="UdarikaEmail" class="teamemail" style="display: none; text-align: left;" >6@gmail.com</p>
                                <p id="RaulEmail" class="teamemail" style="display: none; text-align: left;" >7@gmail.com</p>
                                <p id="CalebEmail" class="teamemail" style="display: none; text-align: left;" >8@gmail.com</p>
@@ -466,7 +466,7 @@
                                             <li><a href="#"> <img src="assets/img/profile/social/fb.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
                                             <li><a href="#"> <img src="assets/img/profile/social/tw.png" style="height: 20px; width: 20px;" alt="sabbi-social" class="img-responsive"></a></li>
                                         </ul>
-                                    </div>
+                                </div>
                             </div><!-- /.profile-card  .profile-card-meta_classic -->
                         </div> 
                 </div>
