--- a/lab_conf-talk.html
+++ b/lab_conf-talk.html
@@ -64,6 +64,35 @@
 
 .dropdown:hover .dropbtn {background-color: rgb(15, 36, 57);}
 
+
+.btn1 {
+  border: 2px solid black;
+  background-color: white;
+  color: black;
+  padding: 8px 18px;
+  font-size: 13px;
+  cursor: pointer;
+}
+
+/* Blue */
+.info {
+  border-color: #2196F3;
+  color: dodgerblue;
+}
+
+.info:hover {
+  background: #2196F3;
+  color: white;
+}
+
+.warning {
+  border-color: #ff9800;
+  color: orange;
+}
+.warning:hover {
+  background: #ff9800;
+  color: white;
+}
     </style>
 </head>
 <body class="auth-theme-rashmore page-conf_talk">
@@ -87,7 +116,7 @@
                         <a href="lab_research.html" title="Research">Research</a>
                     </li>
                     <li class="dropdown">
-                            <a href="poeple.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
+                            <a href="people.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                             <li>
                                 <a href="professor.html" title="Dr Rushmore">Dr. Rushmore</a>
@@ -106,9 +135,9 @@
                             <li class="active">
                                 <a href="lab_conf-talk.html" title="Conferences and Talks">Conferences and Talks</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="lab_book.html" title="Books">Books</a>
-                            </li>
+                            </li> -->
                             
                         </ul>
                     </li>
@@ -149,6 +178,9 @@
                                         <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank" title="citSATdb">citSATdb</a>
                                 </li>
                             </ul>
+                    </li>
+                    <li>
+                            <a href="future_member.html" title="Future Member">Contact</a>
                     </li>
                     <!-- <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">Events <span class="caret"></span></a>
@@ -262,7 +294,8 @@
                                     <p class="meta-text">Impact of the Total
                                             Western Diet for Rodents on Colon Mucosal Gene Expression in a Multigenerational Murine Model of
                                             Colitis-associated Colorectal Cancer.
-                                            <ul><em>1st place in flash talk presentation</em></ul>
+                                            <em>1st place in flash talk presentation</em>
+                                            <button class="btn1 btn info pull-right" style="margin-top: 35px; margin-left: 10px;">Oral presentation</button>
                                     </p>
                                 </div>
                     </li><!-- /timeline-item -->
@@ -279,6 +312,7 @@
                                         USA</div>
                                     <p class="meta-text">Prediction of Host-Pathogen protein-protein interactions using
                                             machine learning.
+                                            <button class="btn1 btn info pull-right" style="margin-top: 75px; margin-left: 10px;">Oral presentation</button>
                                         </p>
                         </div>
                     </li><!-- /timeline-item -->
@@ -296,7 +330,9 @@
                                         USA</div>
                                     <p class="meta-text">Centralizing Bioinformatics via High-Performance
                                             Computing: Applications, Opportunities, and Challenges in the Era of Large-scale -Omics Data.
-                                        </p>
+                                            <!-- <button class="btn1 btn info pull-right" style="margin-top: 40px; margin-left: 10px;">Info</button> -->
+                                            <!-- <button class="btn1 btn info pull-right" style="margin-top: 40px;">Info</button> -->
+                                    </p>
                         </div>
                     </li><!-- /timeline-item -->
                     <br>
@@ -313,6 +349,7 @@
                                     <p class="meta-text">Computational Prediction of Host-Pathogen Protein Interactions in
                                             Melioidosis pathogen Burkholderia pseudomallei and Human reveals novel Virulence Factors and
                                             Infectivity Mechanisms
+                                            <button class="btn1 btn info pull-right" style="margin-top: 50px; margin-left: 10px;">Oral presentation</button>
                                             <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
                                         </p>
                         </div>
@@ -330,6 +367,7 @@
                                         and Applied Sciences; Utah State University (USU), Logan (UT), USA</div>
                                     <p class="meta-text">High-Performance Computing for Bioinformatics and the
                                             Challenges of Big -OMICS Data.
+                                            <button class="btn1 btn info pull-right" style="margin-top: 50px; margin-left: 10px;">Oral presentation</button>
                                             <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
                                         </p>
                         </div>
@@ -347,6 +385,7 @@
                                         Applied Sciences; Utah State University (USU), Logan (UT), USA</div>
                                     <p class="meta-text">Comparative transcriptomics study of alfalfa (Medicago sativa L.) reveals novel genotype-specific
                                             salt tolerance mechanisms.
+                                            <button class="btn1 btn info pull-right" style="margin-top: 35px; margin-left: 10px;">Oral presentation</button>
                                             <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
                                         </p>
                                 </div>
@@ -364,6 +403,7 @@
                                         Utah State University (USU), Logan (UT), USA</div>
                                     <p class="meta-text">Deciphering plant-pathogen interactomes: a study on citrus greening
                                             disease.
+                                            <button class="btn1 btn info pull-right" style="margin-top: 50px; margin-left: 10px;">Oral presentation</button>
                                             <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
                                         </p>
                                 </div>
@@ -382,6 +422,7 @@
                                     <p class="meta-text">Computational Prediction of Host-Pathogen Protein Interactions in
                                             Melioidosis pathogen Burkholderia pseudomallei and Human reveals novel Virulence Factors and
                                             Infectivity Mechanisms.
+                                            <button class="btn1 btn info pull-right" style="margin-top: 50px; margin-left: 10px;">Oral presentation</button>
                                             <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
                                         </p>
                                 </div>
@@ -417,6 +458,8 @@
                                     <p class="meta-text">Gene
                                         expression analysis and DNA methylation patterns of porcine SCNT blastocysts with high and low
                                         incidence of apoptosis.
+                                        <button class="btn1 btn info pull-right" style="margin-top: 50px; margin-left: 10px;">Oral presentation</button>
+                                        <button class="btn1 btn warning pull-right" style="margin-top: 50px; margin-left: 10px;">Poster presentation</button>
                                             <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
                                         </p>
                                 </div>
@@ -440,8 +483,10 @@
                                         Viceroy Hotel, Aspen/Snowmass (CO), USA</div>
                                     <p class="meta-text">PredHPI: an integrated web-server platform for the prediction and
                                         visualization of host-pathogen interactions.
+                                        <button class="btn1 btn info pull-right" style="margin-top: 50px; margin-left: 10px;">Oral presentation</button>
+                                        <button class="btn1 btn warning pull-right" style="margin-top: 50px; margin-left: 10px;">Poster presentation</button>
                                             <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
-                                        </p>
+                                    </p>
                                 </div>
                     </li><!-- /timeline-item -->  
                     <br> 
@@ -459,6 +504,7 @@
                                 <p class="meta-text">Complete genome sequence of
                                         Pythium brassicum P1, an oomycete root pathogen: insights into its host 
                                         specificity to Brassicaceae.
+                                        <button class="btn1 btn info pull-right" style="margin-top: 35px; margin-left: 10px;">Invited presentation</button>
                                         <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
                                     </p>
                             </div>
@@ -477,6 +523,7 @@
                                 <p class="meta-text">Plant-mSubP: a computational framework for the
                                         prediction of single and multi-location protein subcellular localization using integrated machine learning
                                         approaches
+                            
                                         <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
                                     </p>
                             </div>
@@ -513,7 +560,7 @@
                                 <p class="meta-text">Molecular and Morphological Analysis of the
                                         Floral Transition in Aquilegia coerulea.
                                         <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
-                                    </p>
+                                </p>
                             </div>
                     </li><!-- /timeline-item --> 
                     <br>
@@ -547,6 +594,7 @@
                                 <p class="meta-text">Gene expression analysis and DNA methylation patterns of porcine 
                                     SCNT blastocysts with high and low
                                         incidence of apoptosis.
+                                        <button class="btn1 btn info pull-right" style="margin-top: 50px; margin-left: 10px;">Oral presentation</button>
                                         <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
                                     </p>
                             </div>
@@ -564,6 +612,7 @@
                                 <div class="__loc"><span>Location:</span>Punjab Agricultural University
                                     (PAU), Ludhiana (Punjab), India.</div>
                                 <p class="meta-text">Genetic analysis of salinity responses in Medicago genotypes. 
+                                        <button class="btn1 btn info pull-right" style="margin-top: 50px; margin-left: 10px;">Invited presentation</button>
                                         <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
                                     </p>
                             </div>
@@ -777,6 +826,9 @@
                                 Genomics Congress; St. Louis (MO), USA</div>
                             <p class="meta-text">Deciphering genome-scale host-pathogen Protein
                                     Interaction Networks using Artificial Intelligence and its applicability to select agents.
+                                    <button class="btn1 btn info pull-right" style="margin-top: 50px; margin-left: 10px;">Invited Talk</button>
+                                    <button class="btn1 btn warning pull-right" style="margin-top: 50px; margin-left: 10px;">Poster presentation</button>
+
                                     <!-- <ul><em>1 st place in flash talk presentation</em></ul> -->
                                 </p>
                         </div>
