--- a/lab_journal.html
+++ b/lab_journal.html
@@ -50,7 +50,7 @@
                         <a href="lab_research.html" title="Research">Research</a>
                     </li>
                     <li class="dropdown">
-                            <a href="poeple.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
+                            <a href="people.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                             <li>
                                 <a href="professor.html" title="Dr Rushmore">Dr. Rakesh Kaundal</a>
@@ -69,9 +69,9 @@
                                     <li>
                                         <a href="lab_conf-talk.html" title="Conferences and Talks">Conferences and Talks</a>
                                     </li>
-                            <li>
+                            <!-- <li>
                                 <a href="lab_book.html" title="Books">Books</a>
-                            </li>
+                            </li> -->
                            
                         </ul>
                     </li>
@@ -112,6 +112,9 @@
                                         <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank" title="citSATdb">citSATdb</a>
                                 </li>
                             </ul>
+                    </li>
+                    <li>
+                            <a href="future_member.html" title="Future Member">Contact</a>
                     </li>
                     <!-- <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">Events <span class="caret"></span></a>
