--- a/events.html
+++ b/events.html
@@ -167,14 +167,14 @@ svg {
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
                 <div class="nav-btn-wrap"><a href="#" class="btn btn-primary pull-right">Join Research</a></div>
                 <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
-                    <li class="active">
+                    <li class="">
                         <a href="index.html" title="Home">Home</a>
                     </li>
                     <li>
                         <a href="lab_research.html" title="Research">Research</a>
                     </li>
                     <li class="dropdown">
-                            <a href="poeple.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
+                            <a href="people.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                             <li>
                                 <a href="professor.html" title="Dr Rushmore">Dr. Rushmore</a>
@@ -193,13 +193,13 @@ svg {
                                     <li>
                                         <a href="lab_conf-talk.html" title="Conferences and Talks">Conferences and Talks</a>
                                     </li>    
-                            <li>
+                            <!-- <li>
                                 <a href="lab_book.html" title="Books">Books</a>
-                            </li>
+                            </li> -->
                             
                         </ul>
                     </li>
-                    <li class="dropdown">
+                    <li class="dropdown active">
                             <a href="events.html" class="dropdown-toggle"   data-hover="dropdown" title="Tools" data-animations="zoomIn">Tools<span class="caret"></span></a>
                             <ul class=" dropdown-menu" role="menu">
                                 <li>
@@ -236,6 +236,9 @@ svg {
                                         <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank" title="citSATdb">citSATdb</a>
                                 </li>
                             </ul>
+                    </li>
+                    <li>
+                            <a href="future_member.html" title="Future Member">Contact</a>
                     </li>
                     <!-- <li class="dropdown active">
                         <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">Events <span class="caret"></span></a>
