--- a/future_member.html
+++ b/future_member.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button aria-controls="navbar" aria-expanded="false" class="navbar-toggle collapsed" data-target="#navbar" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> 
-                <a class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/final_logo.png"></a>
+                <a class="navbar-brand" href="index.html"><img alt="" style="width: fit-content; height: 75px;" class="img-responsive" src="assets/img/bioinfo_lab.png"></a>
             </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
                 <div class="nav-btn-wrap"><a href="#" class="btn btn-primary pull-right">Join Research</a></div>
@@ -50,7 +50,7 @@
                         <a href="lab_research.html" title="Research">Research</a>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" title="People"  data-hover="dropdown" data-animations="zoomIn">People <span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="people.html" title="People"  data-hover="dropdown" data-animations="zoomIn">People <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li>
                                 <a href="professor.html" title="Dr Rushmore">Dr. Rushmore</a>
@@ -61,30 +61,58 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Publications" data-animations="zoomIn">Publications <span class="caret"></span></a>
-                        <ul class=" dropdown-menu" role="menu">
-                            <li>
-                                <a href="lab_book.html" title="Books">Books</a>
-                            </li>
-                            <li>
-                                <a href="lab_journal.html" title="Journal Articles">Journal Articles</a>
-                            </li>
-                            <li>
-                                <a href="lab_conf-talk.html" title="Conferences and Talks">Conferences and Talks</a>
-                            </li>
-                        </ul>
+                            <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Publications" data-animations="zoomIn">Publications <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>
+                                    <a href="lab_journal.html" title="Journal Articles">Journal Articles</a>
+                                </li>
+                                <li class="">
+                                    <a href="lab_conf-talk.html" title="Conferences and Talks">Conferences and Talks</a>
+                                </li>
+                                <!-- <li>
+                                    <a href="lab_book.html" title="Books">Books</a>
+                                </li> -->
+                                
+                            </ul>
                     </li>
-                    <!-- <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">Events <span class="caret"></span></a>
-                        <ul class=" dropdown-menu" role="menu">
-                            <li>
-                                <a href="events.html" title="Books">Events Page</a>
-                            </li>
-                            <li>
-                                <a href="events_single.html" title="Journal Articles">Events Single Page</a>
-                            </li>
-                        </ul>
-                    </li> -->
+                    <li class="dropdown">
+                            <a href="events.html" class="dropdown-toggle"   data-hover="dropdown" title="Tools" data-animations="zoomIn">Tools<span class="caret"></span></a>
+                            <ul class=" dropdown-menu" role="menu">
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank" title="PredHPI">Pred HPI</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank" title="GreeningDB">Greening DB</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank" title="Plant-mSubP">Plant mSubP</a>
+                                </li>
+                                <li>
+                                        <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank" title="LacSubPred">Lac SubPred</a>
+                                </li>
+                                <li>
+                                        <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">Lig Pred</a>
+                                </li>
+                                <li>
+                                        <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">Ap-iNet</a>
+                                </li>
+                                <li>
+                                        <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank" title="AtSubP">At SubP</a>
+                                </li>
+                                <li>
+                                        <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank" title="RB-Pred">RB-Pred</a>
+                                </li>
+                                <li>
+                                        <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank" title="RSLpred">RS Lpred</a>
+                                </li>
+                                <li>
+                                        <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
+                                </li>
+                                <li>
+                                        <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank" title="citSATdb">citSATdb</a>
+                                </li>
+                            </ul>
+                    </li>
                     <li class="active">
                         <a href="future_member.html" title="Future Member">Contact</a>
                     </li>
@@ -124,7 +152,7 @@
                                                     Postdoctoral researchers, research higher degree (PhD and Masters), 
                                                     honours and undergraduate students are welcome to join our group.</p>
                     <figure class="future_member-figure">
-                        <img src="assets/img/path_to_success.JPG"  alt="" class="img-responsive">
+                        <img src="assets/img/bio_tech_fall.JPG"  alt="" class="img-responsive">
                     </figure>
                     <h2 class="font-md__x stage-vrb-title">Masters and Honours</h2>
                     <p class="future_member-text" style="text-align: justify;">The students are required to have a good understanding of 
@@ -137,7 +165,7 @@
                                                 or Department of <a target="_blank" href="https://psc.usu.edu/">Plants, Soils & Climate</a> are available.</b></p>
                     <div class="__fm_seg" id="join_reaserch_ln">
                         <figure class="future_member-figure">
-                            <img src="assets/img/biotech.JPG"  alt="" class="img-responsive">
+                            <img src="assets/img/colorful.JPG"  alt="" class="img-responsive">
                         </figure>
                        <h2 class="font-md__x stage-vrb-title">Ph.D.</h2>
                        <p style="text-align: justify;">PhD opportunities with government and university-funded scholarships are available each year, 
