--- a/ourteam.html
+++ b/ourteam.html
@@ -121,7 +121,7 @@
                         <a href="lab_research.html" title="Research">Research</a>
                     </li>
                     <li class="dropdown active">
-                            <a href="poeple.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
+                            <a href="people.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                             <li>
                                 <a href="professor.html" title="Dr Rushmore">Dr. Rakesh Kaundal</a>
@@ -183,6 +183,9 @@
                                         <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank" title="citSATdb">citSATdb</a>
                                 </li>
                             </ul>
+                    </li>
+                    <li>
+                            <a href="future_member.html" title="Future Member">Contact</a>
                     </li>
                     <!-- <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">Events <span class="caret"></span></a>
