--- a/lab_research.html
+++ b/lab_research.html
@@ -37,19 +37,19 @@
             <div class="container">
                 <div class="navbar-header">
                     <button aria-controls="navbar" aria-expanded="false" class="navbar-toggle collapsed" data-target="#navbar" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> 
-                    <a class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/site-logo1.png"></a>
+                    <a class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/kaabil_logo.png"></a>
                 </div>
                 <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
                     <div class="nav-btn-wrap"><a href="#" class="btn btn-primary pull-right">Join Research</a></div>
                     <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
-                        <li class="active">
+                        <li >
                             <a href="index.html" title="Home">Home</a>
                         </li>
-                        <li>
+                        <li class="active">
                             <a href="lab_research.html" title="Research">Research</a>
                         </li>
                         <li class="dropdown">
-                                <a href="poeple.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
+                                <a href="people.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                 <li>
                                     <a href="professor.html" title="Dr Rushmore">Dr. Rushmore</a>
@@ -110,6 +110,9 @@
                                             <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank" title="citSATdb">citSATdb</a>
                                     </li>
                                 </ul>
+                        </li>
+                        <li>
+                                <a href="future_member.html" title="Future Member">Contact</a>
                         </li>
                         <!-- <li class="dropdown active">
                             <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">Events <span class="caret"></span></a>
