--- a/contact.html
+++ b/contact.html
@@ -192,6 +192,31 @@ body {
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
+
+.vl {
+  border-left: 1px solid #0f2439;
+  height: 30px;
+  margin-top: 10px;
+  margin-left: 85px;
+  /* position: absolute; */
+}
+
+.bottom-right {
+  /* position: absolute; */
+  bottom: 8px;
+  right: 16px;
+}
+
+.logo_text1 {
+    color: #0f2439;
+    /* background-image: url(https://media.giphy.com/media/Lr2xYGw6IMVofbjRSu/giphy.gif); */
+	font-weight: 700;
+    letter-spacing: 12px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    /* color: white;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; */
+}
+
         </style>
 </head>
 <body class="auth-theme-rashmore">
@@ -201,10 +226,18 @@ body {
     <header class="sabbi-site-head">
         <nav class="navbar navbar-white navbar-kawsa navbar-fixed-top" role="navigation">
             <div class="container">
-                <div class="navbar-header">
-                    <button aria-controls="navbar" aria-expanded="false" class="navbar-toggle collapsed" data-target="#navbar" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> 
-                    <a class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/final_logo.png"></a>
-                </div>
+                    <div class="navbar-header">
+                            <button aria-controls="navbar" aria-expanded="false" class="navbar-toggle collapsed" data-target="#navbar" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> 
+                            <a style="text-decoration:none" class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/kaabil_logo.png">
+                            </a>
+                            <div class="logo_text1" style="line-height: 0.7; margin-left: 85px; padding-top: 20px; font-size: 24px;  width: 310px;  ">KAABiL</div>     
+        
+                            <div class="vl ">  
+                            <div class="logo_text" style="line-height: 1; padding-top: 4px; color:#044f9f ; font-size: 12px; font-weight: normal; width: 310px;  font-style: normal; "><b style="color: #9d164f;">K</b>aundal <b style="color: #9d164f;">A</b>rtificial 
+                                intelligence <br> & 
+                                <b style="color: #9d164f;">A</b>dvanced <b style="color: #9d164f;">Bi</b>oinformatics <b style="color: #9d164f;">L</b>ab</div>
+                            </div>
+                        </div>
                 <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
                         <div class="nav-btn-wrap"><a href="#" class="btn btn-primary pull-right">Join Research</a></div>
                         <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
@@ -471,38 +504,6 @@ body {
         r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
         ga('create','UA-XXXXX-X','auto');ga('send','pageview');
 
-    
-     var form = document.forms["contact"];
-	form.addEventListener('submit',contact_submit,false);
-
-	// function contact_submit(e) {
-	// 	// Stop Form From Submitting
-	// 	e.preventDefault();
-
-	// 	// Set Initial Variables
-	// 	var target = e.target || e.srcElement;
-	// 	var to = 'mhetresuyash7@gmail.com';
-	// 	var uri = 'mailto:' + to;
-	// 	var body = '';
-
-	// 	// Set Form Values to Variables
-	// 	var name = target.elements['firstname'].value;
-	// 	var subject = target.elements['subject'].value;
-	// 	var phone = target.elements['email'].value;
-	// 	var message = target.elements['message'].value;
-
-	// 	// Build Body / Message with all Input Fields
-	// 	body += message + "\r\n\r\n";
-	// 	body += "Name: " + name + "\r\n";
-	// 	body += "Phone Number: " + phone + "\r\n";
-
-	// 	// Build final Mailto URI
-	// 	uri += '?subject=' + encodeURIComponent(subject);
-	// 	uri += '&body=' + encodeURIComponent(body);
-
-	// 	// Open Mailto in New Window / Tab
-	// 	window.open(uri,'_blank');
-	// }
     </script>
 </body>
 </html>
