--- a/events.html
+++ b/events.html
@@ -162,7 +162,7 @@ svg {
         <div class="container">
             <div class="navbar-header">
                 <button aria-controls="navbar" aria-expanded="false" class="navbar-toggle collapsed" data-target="#navbar" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> 
-                <a class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/site-logo1.png"></a>
+                <a class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/kaabil_logo.png"></a>
             </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
                 <div class="nav-btn-wrap"><a href="#" class="btn btn-primary pull-right">Join Research</a></div>
