--- a/index.html
+++ b/index.html
@@ -96,8 +96,35 @@ div#sliding_animation ul {
 .MultiCarousel .leftLst.over,
 .MultiCarousel .rightLst.over {
 	pointer-events: none;
-	background: #ccc;
+    background: #ccc;
 }
+
+.vl {
+  border-left: 1px solid #0f2439;
+  height: 30px;
+  margin-top: 10px;
+  margin-left: 85px;
+  /* position: absolute; */
+}
+
+.bottom-right {
+  /* position: absolute; */
+  bottom: 8px;
+  right: 16px;
+}
+
+.logo_text1 {
+    color: #0f2439;
+    /* background-image: url(https://media.giphy.com/media/Lr2xYGw6IMVofbjRSu/giphy.gif); */
+	font-weight: 700;
+    letter-spacing: 12px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    /* color: white;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; */
+}
+
+
+
     </style>
 </head>
 <body class="auth-theme-rashmore">
@@ -106,7 +133,15 @@ div#sliding_animation ul {
             <div class="container">
                 <div class="navbar-header">
                     <button aria-controls="navbar" aria-expanded="false" class="navbar-toggle collapsed" data-target="#navbar" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> 
-                    <a class="navbar-brand" href="index.html"><img alt="" style="width: fit-content; height: 75px;" class="img-responsive" src="assets/img/bioinfo_lab.png"></a>
+                    <a style="text-decoration:none" class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/red_logo.png">
+                    </a>
+                    <div class="logo_text1" style="line-height: 0.5; margin-left: 85px; padding-top: 28px; font-size: 24px;  width: 310px;  ">KAABiL</div>     
+
+                    <div class="vl ">  
+                    <div class="logo_text" style="line-height: 1; padding-top: 4px; color:#044f9f ; font-size: 12px; font-weight: normal; width: 310px;  font-style: normal; "><b style="color: #9d164f;">K</b>aundal <b style="color: #9d164f;">A</b>rtificial 
+                        intelligence <br> & 
+                        <b style="color: #9d164f;">A</b>dvanced <b style="color: #9d164f;">Bi</b>oinformatics <b style="color: #9d164f;">L</b>ab</div>
+                    </div>
                 </div>
                 <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
                         <div class="nav-btn-wrap"><a href="#" class="btn btn-primary pull-right">Join Research</a></div>
@@ -115,7 +150,7 @@ div#sliding_animation ul {
                                 <a href="index.html" title="Home">Home</a>
                             </li>
                             <li>
-                                <a href="slider.ht" title="Research">Research</a>
+                                <a href="lab_research.html" title="Research">Research</a>
                             </li>
                             <li class="dropdown">
                                     <a href="people.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
@@ -336,7 +371,7 @@ div#sliding_animation ul {
                                                    <img src="assets/img/sabbi-post/p_agr.jpg" alt="" class="img-responsive img-thumpost">
                                                </figure>
                                                <div class="sabbi-thumlinepost-card-meta">
-                                                   <h2 class="meta-title ht-5">OMICS data: Deciphering</h2>
+                                                   <h2 class="meta-title ht-5">NGS data: Deciphering</h2>
                                                    <p class="meta-text"></p>
                                                    <a href="#" class="btn btn-unsolemn btn-action read-more">Read More</a>
                                                </div>
