--- a/lab_conf-talk.html
+++ b/lab_conf-talk.html
@@ -66,11 +66,11 @@
 
 
 .btn1 {
-  border: 2px solid black;
+  border: 1px solid black;
   background-color: white;
   color: black;
   padding: 8px 18px;
-  font-size: 13px;
+  font-size: 10px;
   cursor: pointer;
 }
 
@@ -87,7 +87,7 @@
 
 .warning {
   border-color: #ff9800;
-  color: orange;
+  color: #ff9800;
 }
 .warning:hover {
   background: #ff9800;
@@ -104,7 +104,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button aria-controls="navbar" aria-expanded="false" class="navbar-toggle collapsed" data-target="#navbar" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> 
-                <a class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/site-logo1.png"></a>
+                <a class="navbar-brand" href="index.html"><img alt="" class="img-responsive" src="assets/img/kaabil_logo.png"></a>
             </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
                 <div class="nav-btn-wrap"><a href="#" class="btn btn-primary pull-right" >Join Research</a></div>
