Add existing file

--- a/professor.html
+++ b/professor.html
@@ -274,15 +274,15 @@
                                 <li class="zoom">
                                     <span class="year">Jul 2017 - present</span>
                                     <div class="appoint-meta">
-                                        <h5 class="meta-title">Assistant Professor (Bioinformatics)</h5>
+                                        <h5 class="meta-title">Assistant Professor, Bioinformatics</h5>
                                         <div class="meta-span">Utah State University (USU), Logan, Utah, USA</div>
                                     </div>
                                 </li>
                                 <li class="zoom">
                                     <span class="year">Jul 2017 - present</span>
                                     <div class="appoint-meta">
-                                        <h5 class="meta-title">Director,Bioinformatics Facility,Center for Integrated BioSystems(CIB)</h5>
-                                        <div class="meta-span">Utah State University (USU),Logan,Utah,USA </div>
+                                        <h5 class="meta-title">Director, Bioinformatics Facility, Center for Integrated BioSystems (CIB)</h5>
+                                        <div class="meta-span">Utah State University (USU), Logan, Utah, USA </div>
                                     </div>
                                 </li>
                                 <li class="zoom">
@@ -296,14 +296,14 @@
                                     <span class="year">Jul 2014 - May 2017</span>
                                     <div class="appoint-meta">
                                         <h5 class="meta-title">Director, High-Performance Computing | Bioinformatics Facility, Institute for Integrative Genome Biology
-                                                (IIGB), Botany & Plant Sciences</h5>
+                                                (IIGB)</h5>
                                         <div class="meta-span">University of California, Riverside (UCR), California, USA</div>
                                     </div>
                                 </li>
                                 <li class="zoom">
                                         <span class="year">Mar 2011 - Jun 2014</span>
                                         <div class="appoint-meta">
-                                            <h5 class="meta-title">Faculty [Research Scientist (bioinformatics/metagenomics)], National Institute for Microbial Forensics &
+                                            <h5 class="meta-title">Faculty (Research Scientist), National Institute for Microbial Forensics &
                                                     Food and Agricultural Biosecurity (NIMFFAB), Department of Biochemistry & Molecular Biology</h5>
                                             <div class="meta-span">Oklahoma State University (OSU), Stillwater, Oklahoma, USA</div>
                                         </div>
@@ -314,7 +314,7 @@
                                                 <h5 class="meta-title">Postdoctoral Research Fellow, Bioinformatics Lab, Plant Biology Division</h5>
                                                 <div class="meta-span">The Samuel Roberts Noble Foundation, Ardmore, Oklahoma, USA</div>
                                             </div>
-                                    </li>
+                                    <!-- </li>
                                     <li class="zoom">
                                             <span class="year">Jan 2005 - Mar 2007</span>
                                             <div class="appoint-meta">
@@ -349,7 +349,7 @@
                                                 <h5 class="meta-title">Scientific Assistant (Tea Breeding)</h5>
                                                 <div class="meta-span">Institute of Himalayan Bioresource Technology (IHBT-CSIR), Palampur,India</div>
                                             </div>
-                                    </li>
+                                    </li> -->
                             </ol>
                         </div>
                     </div>
@@ -362,16 +362,16 @@
                                 <li>
                                     <span class="year">2013</span>
                                     <div class="awards-meta">
-                                        <h5 class="awards-title">1st prize</h5>
+                                        <h5 class="awards-title">1<sup>st</sup> prize</h5>
                                         <div class="awards-meta"><span>OSU President’s Cup for creative interdisciplinarity in bioinformatics and computational biology</span></div>
                                     </div>
                                 </li>
                                 <li>
                                     <span class="year">2012</span>
                                     <div class="awards-meta">
-                                        <h5 class="awards-title">3rd place</h5>
-                                        <div class="awards-meta"><span>OSU President’s Cup for creative interdisciplinarity on the project “EDNA: Powerful New Technology for
-                                                Electronic Diagnostic Nucleic acid Analysis”</span></div>
+                                        <h5 class="awards-title">3<sup>rd</sup> place</h5>
+                                        <div class="awards-meta"><span>OSU President’s Cup for creative interdisciplinarity on the project “<i>EDNA: Powerful New Technology for
+                                                Electronic Diagnostic Nucleic acid Analysis</i>”</span></div>
                                     </div>
                                 </li>
                                 <li>
@@ -384,18 +384,18 @@
                                 <li>
                                     <span class="year">2002</span>
                                     <div class="awards-meta">
-                                        <h5 class="awards-title">Third best award for poster paper presentation (Weather based forewarning of rice blast in H.P.)</h5>
-                                        <div class="awards-meta"><span>International Conference on Challenges and Options for Sustainable Development of the Himalayas-
-                                                Beyond 2002” held at CSK HPAU, Palampur, India</span></div>
+                                        <h5 class="awards-title">3<sup>rd</sup> best award for poster paper presentation (Weather based forewarning of rice blast in H.P.)</h5>
+                                        <div class="awards-meta"><span>International Conference on Challenges and Options for Sustainable Development of the Himalayas -
+                                                Beyond 2002, held at CSK HPAU, Palampur, India</span></div>
                                     </div>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <span class="year">1991</span>
                                     <div class="awards-meta">
-                                        <h5 class="awards-title">Merit Certificate for securing first rank in the school in Class XII</h5>
+                                        <h5 class="awards-title">Merit Certificate for securing first rank in the school in Class XII</h5> -->
                                         <!-- <div class="awards-meta"><span>The University of Queensland</span></div> -->
-                                    </div>
-                                </li>
+                                    <!-- </div>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
